tests/parser/valid/declarations/test_simple_struct.src
struct Point {
    int x;
    int y;
}

fn main() -> void {
    Point p;
    return;
}