tests/parser/invalid/syntax_errors/test_empty_params.src
fn foo(,) -> void {}
fn bar(x int,, y int) -> void {}
fn baz(,) {}